--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 Test/obj/Debug/net6.0/Test.GeneratedMSBuildEditorConfig.editorconfig
 Test/obj/Debug/net6.0/Test.assets.cache
 Test/bin/Debug/net6.0/CoverletSourceRootsMapping
+*.dll
+*.pdb
+*.editorconfig
+*.pdb
+*.dll
