--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ Project/bin
 Project/obj/Debug/net6.0/Project.assets.cache
 Project/obj/Debug/net6.0/Project.GeneratedMSBuildEditorConfig.editorconfig
 Test/obj/Debug/net6.0/Test.csproj.AssemblyReference.cache
+Project/bin/Debug/net6.0/Project.dll
+Project/bin/Debug/net6.0/Project.pdb
+Project/obj/Debug/net6.0/Project.assets.cache
+Project/obj/Debug/net6.0/Project.dll
+Project/obj/Debug/net6.0/Project.GeneratedMSBuildEditorConfig.editorconfig
+Project/obj/Debug/net6.0/Project.pdb
+Project/obj/Debug/net6.0/ref/Project.dll
+Project/obj/Debug/net6.0/refint/Project.dll
