--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Project/obj/Debug/net6.0/Project.GeneratedMSBuildEditorConfig.editorconfig
 Project/obj/Debug/net6.0/Project.pdb
 Project/obj/Debug/net6.0/ref/Project.dll
 Project/obj/Debug/net6.0/refint/Project.dll
+Test/obj/Debug/net6.0/Test.csproj.AssemblyReference.cache
