--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ Project/obj/Debug/net6.0/Project.pdb
 Project/obj/Debug/net6.0/ref/Project.dll
 Project/obj/Debug/net6.0/refint/Project.dll
 Test/obj/Debug/net6.0/Test.csproj.AssemblyReference.cache
+Project/obj/project.nuget.cache
+Project/obj/Project.csproj.nuget.g.props
+Project/obj/Project.csproj.nuget.dgspec.json
+Project/obj/project.assets.json
+Project/obj/Debug/net6.0/Project.pdb
+Project/obj/Debug/net6.0/Project.genruntimeconfig.cache
+Project/obj/Debug/net6.0/Project.dll
+Project/obj/Debug/net6.0/Project.assets.cache
+Project/bin/Debug/net6.0/Project.pdb
+Project/bin/Debug/net6.0/Project.dll
