--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ Project/obj/Debug/net6.0/Project.dll
 Project/obj/Debug/net6.0/Project.assets.cache
 Project/bin/Debug/net6.0/Project.pdb
 Project/bin/Debug/net6.0/Project.dll
+Project/bin/Debug/net6.0/Project.dll
