--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
    "request": "launch",
    "preLaunchTask": "build",
    // If you have changed target frameworks, make sure to update the program path.
-   "program": "${workspaceFolder}/PROJECT-B/project/bin/Debug/net6.0/PROJECT B.dll",
+   "program": "${workspaceFolder}/Project/bin/Debug/net6.0/Project.dll",
    "args": [],
-   "cwd": "${workspaceFolder}/PROJECT-B/project",
+   "cwd": "${workspaceFolder}/Project",
    // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
    "console": "internalConsole",
    "stopAtEntry": false
