--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ Project/obj/Debug/net6.0/Project.assets.cache
 Project/bin/Debug/net6.0/Project.pdb
 Project/bin/Debug/net6.0/Project.dll
 Project/bin/Debug/net6.0/Project.dll
+Project/obj/Debug/net6.0/Project.assets.cache
+Project/obj/Debug/net6.0/Project.GeneratedMSBuildEditorConfig.editorconfig
+Test/bin/Debug/net6.0/CoverletSourceRootsMapping
+Test/obj/Debug/net6.0/Test.csproj.AssemblyReference.cache
