--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Project/obj/Debug/net6.0/Project.assets.cache
 Project/bin/Debug/net6.0/Project.pdb
 Project/bin/Debug/net6.0/Project.dll
 Project/bin/Debug/net6.0/Project.dll
+Project/bin/Debug/net6.0/Project.dll
+Project/bin/Debug/net6.0/Project.exe
