--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.6.0"/>
+    <PackageReference Include="CsvHelper" Version="30.0.1"/>
   </ItemGroup>
 </Project>
