--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.6.0"/>
     <PackageReference Include="CsvHelper" Version="30.0.1"/>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.117"/>
+    <PackageReference Include="supabase-csharp" Version="0.10.0"/>
   </ItemGroup>
 </Project>
